--- a/Veggie/srch.html
+++ b/Veggie/srch.html
@@ -12,6 +12,9 @@
 var map;
 var infowindow;
 function initialize() {
+  $(".hiden").fadeOut('slow');
+    console.log(document.getElementById("search").value)
+    var query = document.getElementById("search").value
     var mapOptions = {
       zoom: 15,
       mapTypeId: google.maps.MapTypeId.ROADMAP
@@ -90,11 +93,12 @@ function initialize() {
             console.log(results[i]);
             for (d = 0;d < array.length; d++){
              // console.log(d + "=" + array[d]);
-             console.log(array[d][4][0]);
-                if (place.vicinity == array[d][1]){
-                  createMarker(results[i]);
-                  console.log(array[d][1]);                                   
+             //console.log(array[d]);
+              for (z = 0; z<array[d][4].length; z++){
+                if (place.vicinity == array[d][1] && query == array[d][4][z]){
+                  createMarker(results[i]);                            
                 }
+              }
             }
           }
 
@@ -111,7 +115,7 @@ function initialize() {
                 '<h5>'+place.vicinity+'</h5>'+
                 '<div id="bodyContent">'+
                 '<p>'+array[d][2]+'</p>'+
-                '<p>'+array[d][4][0]+'</p>'+
+                '<p>'+array[d][4]+'</p>'+
                 '</div>'+
             '</div>';
 
@@ -165,20 +169,22 @@ function initialize() {
     }
   
   //]]>
-google.maps.event.addDomListener(window, 'load', initialize);
+//google.maps.event.addDomListener(window, 'load', initialize);
 
     </script>
   </head>
   <body>
       <section>
         <div class="content">
-          <h1>VEGGIE GPS</h1>
-          <nav>
-            <ul>
-              <li><a href="#">About Us</a></li>
-              <li><a href="form.html">Signup</a></li>
-            </ul>
-          </nav>
+            <form>
+              <br />
+              <input id="search" type="text" class="text-center" value="search for dish">
+              <a href="#" class="button" onclick="initialize()">Submit</a>
+            </form>
+        </div>
+        <div class="main_text">
+          <h1 class="hiden">WELCOME TO VEGGPS</h1>
+          <h2 class="hiden">Simply type a dish name above and hit submit, you get a list of restaurants which serves it :)</h2>
         </div>
         <div id="map-canvas"></div>
        <!-- <div id="details"></div>-->
