--- a/index.html
+++ b/index.html
@@ -4,41 +4,47 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>Blueprint: Split Layout</title>
-		<meta name="description" content="Blueprint: Split Layout" />
-		<meta name="keywords" content="website template, layout, css3, transition, effect, split, dual, two sides, portfolio" />
-		<meta name="author" content="Codrops" />
+		<title>VEGGPS</title>
+		<meta name="description" content="This platform finds vegetarian dishes in restaurants near you" />
+		<meta name="keywords" content="vegetarian, vegetarian finder, vegetarian food finder, food finder, vegetairan dishes" />
+		<meta name="author" content="Aishwarya Chaturvedi" />
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/component2.css" />
 		<script src="js/modernizr.custom.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     	<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDnB1c46S08wnHCFLQBQX-tmHS1mq1tc9E&libraries=places&sensor=true"></script>
+		<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 
 		<script src="js/map.js"></script>
 		<script src="js/all.js"></script>
 	</head>
 	<body>
+		<div id="load" style="">
+			<center><img src="img/add.png"><h1>Loading...</h1></center>
+		</div>
 		<div class="container">
+
 			<div id="splitlayout" class="splitlayout">
+
 				<div class="intro">
 					<div class="side side-left">
 						<header class="codropsheader clearfix">
-							<span>Find Veggie meals <span class="bp-icon bp-icon-about" data-content="This is the perfect place to find viggie meals and restaurants accross London :)"></span></span>
-							<h1>VEGGPS</h1>
+							<img src="img/logo.png" style="width:350px;z-index: 2000;">
 							<nav>
-		
+							<span>
+								Simply type a dish name below and hit submit, we will provide restaurants near you which serves it !
+							</span>	
 							</nav>
 							<div class="demos">
-<!-- 								<a href="index.html">Effect 1</a>
-								<a class="current" href="index2.html">Effect 2</a> -->
+
 							</div>
 						</header>
 						<div class="intro-content">
 							<div class="profile"><img src="img/search.png" alt="profile1"></div>
 						<h1>
 							<span>
-								<input id="search" type="text" placeholder="Type Dish Name" required/>
+								<input id="search" type="text" placeholder="Type Dish Name" autofocus/>
 							</span>
 							<span>
 								<a href="javascript:void(0)" class="submit"/>Submit</a>
@@ -50,41 +56,57 @@
 					<div class="side side-right">
 						<div class="intro-content">
 							<div class="profile"><img src="img/add.png" alt="profile2"></div>
-							<h1><span>Add Veggie Food</span><span>Share it!</span></h1>
+							<h1><span>Add Veggie Food</span><span>Click Here!</span></h1>
 						</div>
 						<div class="overlay"></div>
 					</div>
 				</div><!-- /intro -->
+
 				<div class="page page-right">
 					<div class="page-inner">
 						<section>
 								<input id="pac-input" class="controls" type="text" placeholder="Eg. Restaurant Name, area">
 							    <div class="modalBox hide" style="left:20px;position:absolute;width:300px;background:rgba(0,0,0,0.7);z-index:9999;padding: 10px">
-							      <input class="dish0" type="text"/>
-							      <input class="dish1" type="text"/>
-							      <input class="dish2" type="text"/>
-							      <input class="dish3" type="text"/>
-							      <input class="dish4" type="text"/>
-							      <input class="dish5" type="text"/>
-							      <input type="button" onclick="postinfo()" id="send" value="Add"></input>
+							    	<div class="row">
+							    		<input name="dish0" value="aa" type="text"/>
+							    		<input name="dish0" value="11" type="number"/>
+							    	</div>
+
+							    	<div class="row">
+							    		<input name="dish1" value="bb" type="text"/>
+							    		<input name="dish1" value="22" type="number"/>
+							    	</div>
+
+							    	<div class="row">
+							    		<input name="dish2" value="cc" type="text"/>
+							    		<input name="dish2" value="33" type="number"/>
+							    	</div>
+
+							    	<div class="row">
+							    		<input name="dish3" value="dd" type="text"/>
+							    		<input name="dish3" value="44" type="number"/>
+							    	</div>							    	
+
+							      <button onclick="postinfo()" id="send" >Send</button>
 							    </div>
 							<div id="map"></div>
 						</section>
 					</div><!-- /page-inner -->
 				</div><!-- /page-right -->
 				<div class="page page-left">
+						<div id="review_box">
+						</div>
 					<div class="page-inner">
 						<section>
 							<h2>Results</h2><a id="more" href="#">more</a>
 							<div id="map-canvas"></div>
 						</section>
 						<section id="full_content">
-
 						</section>
 					</div><!-- /page-inner -->
 				</div><!-- /page-left -->
-				<a href="#" class="back back-right" title="back to intro">&rarr;</a>
-				<a href="#" class="back back-left" title="back to intro">&larr;</a>
+				<a href="#" class="back back-right" title="back to intro" style="z-index:10000">&rarr;</a>
+				<a href="#" class="back back-left" title="back to intro" style="z-index:10000">&larr;</a>
 			</div><!-- /splitlayout -->
 		</div><!-- /container -->
 		<script src="js/classie.js"></script>
